feat: Add button to say hi

--- a/src/index.html
+++ b/src/index.html
@@ -66,15 +66,21 @@
               <li class="nav-item me-3">
                 <a class="nav-link" href="#contact">Contato</a>
               </li>
+              <li class="nav-item me-3">
+                <form method="post" action="mailto:allansousasilva1@gmail.com">
+                  <input id="btn-hi" type="submit" value="Diga Oi!"/>
+                </form>
+              </li>
             </ul>
           </div>
         </div>
       </nav>
     </header>
 
+    
     <main class="h-100">
       <section id="home" class="h-100 d-flex align-items-center">
-        <div id="text-home" class="">
+        <div id="text-home" class="animated fadeInLeft">
           <p class="fs-3 text-light">Olá, eu sou</p>
           <h1 id="text-name">
             ALLAN<span class="text-light ps-3">SILVA</span>
@@ -112,7 +118,7 @@
           <div>
             <img
               id="img-about"
-              class="img-thumbnail my-5"
+              class="img-thumbnail my-5 "
               src="./assets/IMG_20210508_005453_404.jpg"
               alt="imagem sobre mim"
             />
@@ -122,7 +128,7 @@
       <section id="skills" class="container">
         <h2>Habilidades</h2>
         <div class="container-skills">
-          <div class="card" style="width: 18rem">
+          <div class="card">
             <img
               src="./assets/html-5.png"
               class="card-img-top"
@@ -132,67 +138,84 @@
               <p class="card-text">HTML 5</p>
             </div>
           </div>
-          <div class="card" style="width: 18rem">
+          <div class="card">
             <img src="./assets/css-3.png" class="card-img-top" alt="logo-css" />
             <div class="card-body">
-              <p class="card-text">
-                CSS 3
-              </p>
+              <p class="card-text">CSS 3</p>
             </div>
           </div>
-          <div class="card" style="width: 18rem">
+          <div class="card">
             <img src="./assets/js.png" class="card-img-top" alt="logo-js" />
             <div class="card-body">
-              <p class="card-text">
-                JAVASCRIPT
-              </p>
+              <p class="card-text">JAVASCRIPT</p>
             </div>
           </div>
-          <div class="card" style="width: 18rem">
-            <img src="./assets/" class="card-img-top" alt="..." />
+          <div class="card">
+            <img
+              src="./assets/reacticon.svg"
+              class="card-img-top"
+              alt="logo-react"
+            />
             <div class="card-body">
-              <p class="card-text">
-                REACT JS
-              </p>
+              <p class="card-text">REACT JS</p>
+            </div>
+          </div>
+          <div class="card">
+            <img
+              src="./assets/node-js.png"
+              class="card-img-top"
+              alt="logo-node"
+            />
+            <div class="card-body">
+              <p class="card-text">NODE JS</p>
             </div>
           </div>
         </div>
         <div class="container-skills">
-          <div class="card" style="width: 18rem">
+          <div class="card">
             <img
-              src="./assets/html-5.png"
+              src="./assets/typescript.png"
               class="card-img-top"
-              alt="logo-html"
+              alt="logo-typescript"
             />
             <div class="card-body">
-              <p class="card-text">HTML</p>
+              <p class="card-text">TYPESCRIPT JS</p>
             </div>
           </div>
-          <div class="card" style="width: 18rem">
-            <img src="..." class="card-img-top" alt="..." />
+          <div class="card">
+            <img
+              src="./assets/Git-Icon-1788C.png"
+              class="card-img-top"
+              alt="logo-git"
+            />
             <div class="card-body">
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
+              <p class="card-text">GIT</p>
             </div>
           </div>
-          <div class="card" style="width: 18rem">
-            <img src="..." class="card-img-top" alt="..." />
+          <div class="card">
+            <img
+              src="./assets/github.png"
+              class="card-img-top"
+              alt="logo-github"
+            />
             <div class="card-body">
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
+              <p class="card-text">GITHUB</p>
             </div>
           </div>
-          <div class="card" style="width: 18rem">
-            <img src="..." class="card-img-top" alt="..." />
+          <div class="card">
+            <img
+              src="./assets/bootstrap-logo-shadow.png"
+              class="card-img-top"
+              alt="logo-bootstrap"
+            />
             <div class="card-body">
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
+              <p class="card-text">BOOTSTRAP</p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="./assets/sass.png" class="card-img-top" alt="logo-sass" />
+            <div class="card-body">
+              <p class="card-text">SASS</p>
             </div>
           </div>
         </div>
