feat: Add responsiveness on mobile and tablet

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
   <main class="h-100">
     <section id="home" class="h-100 d-flex align-items-center">
       <div id="text-home" class="animated fadeInLeft">
-        <p class="text-light home-title">Olá, eu sou</p>
+        <p class="text-light">Olá, eu sou</p>
         <h1 id="text-name">
           ALLAN<span class="text-light ps-3">SILVA</span>
         </h1>
@@ -73,7 +73,7 @@
       <h1 class="text-uppercase fw-bold text-light">
         < Sobre mim>
       </h1>
-      <div class="d-flex">
+      <div class="container-about d-flex">
         <div class="pe-4 py-5">
           <p class="fs-4 py-5">
             Desenvolvedora Front End cursando Ciências da Computação pela
@@ -93,8 +93,8 @@
             ut vulputate metus.
           </p>
         </div>
-        <div>
-          <img id="img-about" class="img-thumbnail my-5" src="./assets/IMG_20210508_005453_404.jpg"
+        <div class="container-img-about">
+          <img id="img-about" class="img-thumbnail" src="./assets/IMG_20210508_005453_404.jpg"
             alt="imagem sobre mim" />
         </div>
       </div>
@@ -285,18 +285,20 @@
     </div>
     <footer id="contact" class="h-50">
       <div class="container-information">
-        <h4 class="fs-4">Allan Sousa Silva</h4>
-        <h1>Hello world!</h1>
+        <h3 class="fs-3">Allan Sousa Silva</h3>
+        <a href="mailto:allansousasilva1@gmail.com">
+          <h5 class="title-email fs-5">Entre em contato!</h5>
+        </a>
       </div>
       <div class="container-apps-contact">
-        <a href="">
-          <img class="img-app" src="./assets/linkedin.png" alt="imagem sobre mim" />
+        <a  target="_blank"  href="https://www.linkedin.com/in/allan-sousa-silva/">
+          <img class="img-app" src="./assets/linkedin.png" alt="imagem-Linkedin" />
         </a>
-        <a href="">
-          <img class="img-app" src="./assets/cv.png" alt="imagem sobre mim" />
+        <a  target="_blank"  href="https://drive.google.com/file/d/1RBgwfrxeyftpNBlvEDMC9yiRhUeA1R3G/view?usp=sharing">
+          <img class="img-app" src="./assets/cv.png" alt="imagem-CV" />
         </a>
-        <a href="">
-          <img class="img-app" src="./assets/github.png" alt="imagem sobre mim" />
+        <a  target="_blank"  href="https://github.com/Allan-SS">
+          <img class="img-app" src="./assets/github.png" alt="imagem-GitHub" />
         </a>
       </div>
     </footer>
