feat: finish footer

--- a/src/index.html
+++ b/src/index.html
@@ -281,13 +281,14 @@
       </div>
     </section>
     <div id="container-img-contact">
-      <img id="img-contact" class="img-thumbnail my-5" src="./assets/Design sem nome.png" alt="imagem sobre mim" />
+      <img id="img-contact" class="img-thumbnail" src="./assets/Design sem nome.png" alt="imagem sobre mim" />
     </div>
     <footer id="contact" class="h-50">
       <div class="container-information">
         <h3 class="fs-3">Allan Sousa Silva</h3>
-        <a href="mailto:allansousasilva1@gmail.com">
-          <h5 class="title-email fs-5">Entre em contato!</h5>
+        <p class="text-contact">Se você quiser entrar em contato para falar sobre um novo projeto ou apenas dizer "Olá", envie-me um e-mail.</p>
+        <a class="title-email" href="mailto:allansousasilva1@gmail.com">
+          <h5 >allansousasilva1@gmail.com</h5>
         </a>
       </div>
       <div class="container-apps-contact">
