feat: remove button 'Diga Oi'

--- a/src/index.html
+++ b/src/index.html
@@ -44,13 +44,6 @@
             <li class="nav-item me-5">
               <a class="nav-link" href="#contact">Contato</a>
             </li>
-            <li class="nav-item me-3">
-              <a href="mailto:allansousasilva1@gmail.com">
-                <button class="btn btn-default btn-animation">
-                  Diga Oi!
-                </button>
-              </a>
-            </li>
           </ul>
         </div>
       </div>
@@ -60,7 +53,7 @@
   <main class="h-100">
     <section id="home" class="h-100 d-flex align-items-center">
       <div id="text-home" class="animated fadeInLeft">
-        <p class="text-light">Olá, eu sou</p>
+        <p class="fs-4 text-light">Olá, eu sou</p>
         <h1 id="text-name">
           ALLAN<span class="text-light ps-3">SILVA</span>
         </h1>
@@ -259,13 +252,13 @@
     </div>
     <footer id="contact" class="h-50">
       <div class="container-apps-contact">
-        <a target="_blank" href="https://www.linkedin.com/in/allan-sousa-silva/">
+        <a target="_blank" href="https://www.linkedin.com/in/allan-sousa-silva/" title="Linkedin" >
           <img class="img-app" src="./assets/linkedin.svg" alt="imagem-Linkedin" />
         </a>
-        <a target="_blank" href="https://drive.google.com/file/d/1RBgwfrxeyftpNBlvEDMC9yiRhUeA1R3G/view?usp=sharing">
+        <a target="_blank" href="https://drive.google.com/file/d/1RBgwfrxeyftpNBlvEDMC9yiRhUeA1R3G/view?usp=sharing" title="Curriculum vitæ">
           <img class="img-app" src="./assets/currículo.png" alt="imagem-CV" />
         </a>
-        <a target="_blank" href="https://github.com/Allan-SS">
+        <a target="_blank" href="https://github.com/Allan-SS" title="GitHub">
           <img class="img-app" src="./assets/github.svg" alt="imagem-GitHub" />
         </a>
       </div>
