feat: updated the texts and some responsibilites

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
   <!-- GOOGLE FONTS -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;800&family=Rubik:wght@300&display=swap"
+    rel="stylesheet">
+
 
   <link rel="stylesheet" href="style.css" />
   <title>Allan Silva</title>
@@ -57,36 +59,26 @@
         <h1 id="text-name">
           ALLAN<span class="text-light ps-3">SILVA</span>
         </h1>
-        <p class="fs-3">Front End Developer</p>
-        <p id="text-description" class="fs-6">
+        <p class="fs-3">Front-End Developer</p>
+        <!-- <p id="text-description" class="fs-6">
           Desenvolvimento Web - Programação de sites responsivos usando CMS
           Wordpress, Landing Pages, Lojas Virtuais, e Montagem de
           Email-Marketing, Para saber mais entre em contato.
-        </p>
+        </p> -->
       </div>
     </section>
     <section id="about" class="container h-100">
       <h1 class="text-uppercase fw-bold text-light">
-        < Sobre mim>
+        < Sobre mim >
       </h1>
       <div class="container-about d-flex">
         <div class="pe-4 py-5">
-          <p class="fs-4 py-5">
-            Desenvolvedora Front End cursando Ciências da Computação pela
-            Estácio
+          <p class="fs-5">
+            Meu nome é Allan, tenho 19 anos. Moro no Rio de Janeiro.
           </p>
           <p class="fs-5">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Vestibulum laoreet velit in placerat dignissim. Vivamus
-            ullamcorper, justo sit amet euismod cursus, lorem orci varius
-            libero, et porttitor ex massa eget purus. Maecenas turpis enim,
-            feugiat non ex quis, volutpat luctus risus. Sed est enim,
-            consectetur id maximus non, luctus sed ligula. Donec tincidunt
-            ultrices est non rutrum. Nunc dolor velit, suscipit eget eros at,
-            maximus viverra risus. Donec vitae dolor lobortis, sollicitudin
-            magna et, sagittis arcu. In sem mi, lobortis vitae auctor euismod,
-            eleifend a tellus. Nam pretium purus eget blandit dignissim. Nam
-            ut vulputate metus.
+            Especializado no desenvolvimento Front-end, estou sempre buscando entregar a melhor interface funcional ao usuário. Sou um profissional curioso e atento.
+Experiência com HTML 5, CSS 3, Material-UI, React Js, Javascript ES6, TypeScript, NodeJS, Sass. Integração de serviços REST, Desenho Responsivo, UX, Metodologias Ágeis.
           </p>
         </div>
         <div class="container-img-about">
@@ -161,86 +153,94 @@
     </section>
     <section id="projects">
       <h1 class="container text-uppercase fw-bold text-light">
-        < Projetos>
+        < Projetos >
       </h1>
-      <div class="container-projects row row-cols-2 g-0">
-        <div class="card mb-3">
-          <div class="row">
-            <div class="col-md-4">
-              <img src="./assets/Pokemon.png" class="img-fluid rounded-start" alt="..." />
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title fs-3">PokeDex</h5>
-                <p class="card-text">
-                  This is a wider card with supporting text below as a natural
-                  lead-in to additional content. This content is a little bit
-                  longer.
-                </p>
-                <a type="link" href="https://www.google.com" target="_blank"
-                  class="btn btn-animation btn-default">Web</a>
-                <a type="link" href="https://github.com/Allan-SS/Pokemon-react" target="_blank"
-                  class="btn btn-animation btn-default">Code</a>
+      <div class="container-projects row g-0 px-md-5">
+        <div class="col-md-6 d-flex justify-content-center">
+          <div class="card mb-3">
+            <div class="row">
+              <div class="col-md-4">
+                <img src="./assets/Pokemon.png" class="img-fluid rounded-start" alt="..." />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title fs-3">PokeDex</h5>
+                  <p class="card-text">
+                    This is a wider card with supporting text below as a natural
+                    lead-in to additional content. This content is a little bit
+                    longer.
+                  </p>
+                  <a type="link" href="https://www.google.com" target="_blank"
+                    class="btn btn-animation btn-default">Web</a>
+                  <a type="link" href="https://github.com/Allan-SS/Pokemon-react" target="_blank"
+                    class="btn btn-animation btn-default">Code</a>
+                </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="card mb-3">
-          <div class="row">
-            <div class="col-md-4">
-              <img src="./assets/Photo-description.jpg" class="img-fluid rounded-start" alt="..." />
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title fs-3">PROJETO</h5>
-                <p class="card-text">
-                  This is a wider card with supporting text below as a natural
-                  lead-in to additional content. This content is a little bit
-                  longer.
-                </p>
-                <a type="link" href="https://www.google.com" target="_blank"
-                  class="btn btn-animation btn-default">Web</a>
-                <a type="link" href="#" target="_blank" class="btn btn-animation btn-default">Code</a>
+        <div class="col-md-6 d-flex justify-content-center">
+          <div class="card mb-3">
+            <div class="row">
+              <div class="col-md-4">
+                <img src="./assets/Photo-description.jpg" class="img-fluid rounded-start" alt="..." />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title fs-3">PROJETO</h5>
+                  <p class="card-text">
+                    This is a wider card with supporting text below as a natural
+                    lead-in to additional content. This content is a little bit
+                    longer.
+                  </p>
+                  <a type="link" href="https://www.google.com" target="_blank"
+                    class="btn btn-animation btn-default">Web</a>
+                  <a type="link" href="#" target="_blank" class="btn btn-animation btn-default">Code</a>
+                </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="card mb-3">
-          <div class="row">
-            <div class="col-md-4">
-              <img src="./assets/IMG_20210508_005453_404.jpg" class="img-fluid rounded-start" alt="..." />
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title fs-3">PROJETO</h5>
-                <p class="card-text">
-                  This is a wider card with supporting text below as a natural
-                  lead-in to additional content. This content is a little bit
-                  longer.
-                </p>
-                <a type="link" href="https://www.google.com" target="_blank"
-                  class="btn btn-animation btn-default">Web</a>
-                <a type="link" href="#" target="_blank" class="btn btn-animation btn-default">Code</a>
+        <div class="col-md-6 d-flex justify-content-center">
+          <div class="card mb-3">
+            <div class="row">
+              <div class="col-md-4">
+                <img src="./assets/IMG_20210508_005453_404.jpg" class="img-fluid rounded-start" alt="..." />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title fs-3">PROJETO</h5>
+                  <p class="card-text">
+                    This is a wider card with supporting text below as a natural
+                    lead-in to additional content. This content is a little bit
+                    longer.
+                  </p>
+                  <a type="link" href="https://www.google.com" target="_blank"
+                    class="btn btn-animation btn-default">Web</a>
+                  <a type="link" href="#" target="_blank" class="btn btn-animation btn-default">Code</a>
+                </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="card mb-3">
-          <div class="row">
-            <div class="col-md-4">
-              <img src="./assets/IMG_20210508_005453_404.jpg" class="img-fluid rounded-start" alt="..." />
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title fs-3">PROJETO</h5>
-                <p class="card-text">
-                  This is a wider card with supporting text below as a natural
-                  lead-in to additional content. This content is a little bit
-                  longer.
-                </p>
-                <a type="link" href="https://www.google.com" target="_blank"
-                  class="btn btn-animation btn-default">Web</a>
-                <a type="link" href="#" target="_blank" class="btn btn-animation btn-default">Code</a>
+        <div class="col-md-6 d-flex justify-content-center">
+          <div class="card mb-3">
+            <div class="row">
+              <div class="col-md-4">
+                <img src="./assets/IMG_20210508_005453_404.jpg" class="img-fluid rounded-start" alt="..." />
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title fs-3">PROJETO</h5>
+                  <p class="card-text">
+                    This is a wider card with supporting text below as a natural
+                    lead-in to additional content. This content is a little bit
+                    longer.
+                  </p>
+                  <a type="link" href="https://www.google.com" target="_blank"
+                    class="btn btn-animation btn-default">Web</a>
+                  <a type="link" href="#" target="_blank" class="btn btn-animation btn-default">Code</a>
+                </div>
               </div>
             </div>
           </div>
@@ -252,10 +252,11 @@
     </div>
     <footer id="contact" class="h-50">
       <div class="container-apps-contact">
-        <a target="_blank" href="https://www.linkedin.com/in/allan-sousa-silva/" title="Linkedin" >
+        <a target="_blank" href="https://www.linkedin.com/in/allan-sousa-silva/" title="Linkedin">
           <img class="img-app" src="./assets/linkedin.svg" alt="imagem-Linkedin" />
         </a>
-        <a target="_blank" href="https://drive.google.com/file/d/1RBgwfrxeyftpNBlvEDMC9yiRhUeA1R3G/view?usp=sharing" title="Curriculum vitæ">
+        <a target="_blank" href="https://drive.google.com/file/d/1RBgwfrxeyftpNBlvEDMC9yiRhUeA1R3G/view?usp=sharing"
+          title="Curriculum vitæ">
           <img class="img-app" src="./assets/currículo.png" alt="imagem-CV" />
         </a>
         <a target="_blank" href="https://github.com/Allan-SS" title="GitHub">
